# Mealie-Backup

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: run_backup.bat  run_backup.sh
src/: config.rs  get_backup.rs  main.rs
